--- a/pre-commit/Dockerfile
+++ b/pre-commit/Dockerfile
@@ -2,7 +2,8 @@ FROM dokify/dind:0.0.1
 
 RUN apt-get update && \
     apt-get install -y \
-    python3-pip && \
+    python3-pip \
+    openssh-client && \
     pip3 install pre-commit && \
     apt-get autoclean && \
     apt-get autoremove && \
