--- a/pre-commit/Dockerfile
+++ b/pre-commit/Dockerfile
@@ -1,26 +1,10 @@
-FROM debian:buster
+FROM dokify/dind:0.0.2
 
 RUN apt-get update && \
     apt-get install -y \
     python3-pip \
-    openssh-client \
-    apt-transport-https \
-    ca-certificates \
-    gnupg2 \
-    curl \
-    tini \
-    git \
-    make \
-    kmod \
-    procps && \
-    curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add - && \
-    echo "deb [arch=amd64] https://download.docker.com/linux/debian buster stable" | tee /etc/apt/sources.list.d/docker.list && \
-    apt-get update && \
-    apt-get install --no-install-recommends -y docker-ce && \
-    apt-get autoclean && \
-    curl -L "https://github.com/docker/compose/releases/download/1.27.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose && \
-    chmod +x /usr/local/bin/docker-compose && \
+    openssh-client && \
     pip3 install pre-commit && \
     apt-get autoclean && \
     apt-get autoremove && \
-    rm -rf /var/lib/apt/lists/*
+    rm -rf /var/lib/apt/lists/* \
