--- a/phpmd/Dockerfile
+++ b/phpmd/Dockerfile
@@ -1,18 +1,18 @@
-FROM alpine:3.13
+FROM php:8.0.6-fpm-alpine
 #https://gitlab.com/daverona/pre-commit
 WORKDIR /app
 
 RUN apk add --no-cache \
     bash \
     composer \
-    php7 \
-    php7-dom \
-    php7-simplexml \
-    php7-tokenizer \
-    php7-xml \
-    php7-xmlwriter \
+    php8 \
+    php8-dom \
+    php8-simplexml \
+    php8-tokenizer \
+    php8-xml \
+    php8-xmlwriter \
   && composer require --no-cache --optimize-autoloader \
-    phpmd/phpmd  \
+    phpmd/phpmd:2.12.0  \
   && rm -rf /root/.composer
 
 COPY pre-commit-hooks/ /app/pre-commit-hooks/
