create new pdftk version 2.0.1

--- a/pdftk/Dockerfile
+++ b/pdftk/Dockerfile
@@ -7,19 +7,20 @@ WORKDIR /app
 
 SHELL [ "/bin/bash", "-c" ]
 
+COPY libgcj-common_6.4-3ubuntu1_all.deb /tmp
+COPY libgcj14_4.8.5-4ubuntu7_amd64.deb /tmp
+COPY pdftk_2.01-1_amd64.deb /tmp
+
 RUN apt-get update && apt-get install -yq --no-install-recommends gnupg \
     && apt-get update && apt-get install -yq --no-install-recommends \
        git \
        ca-certificates \
-       gradle \
-    && cd /tmp \
-    && git clone https://gitlab.com/pdftk-java/pdftk \
-    && cd pdftk  \
-    && git checkout v3.0.0 \
-    && gradle wrapper --gradle-version 4.8 \
-    && ./gradlew shadowJar \
-    && cp build/libs/pdftk-all.jar /usr/local/sbin/ \
+       python \
+       gcc \
+    && apt install -fy /tmp/libgcj-common_6.4-3ubuntu1_all.deb \
+    && apt install -fy /tmp/libgcj14_4.8.5-4ubuntu7_amd64.deb \
+    && apt install -fy /tmp/pdftk_2.01-1_amd64.deb \
     && rm /tmp/* -rf \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-COPY pdftk /usr/local/bin/
+CMD ["pdftk"]
